Made Several changes to the way the connectors will work, improved schedules, and updated runtime.

--- a/Connections/CsvTest.yaml
+++ b/Connections/CsvTest.yaml
@@ -1,4 +1,4 @@
-connections:
-  - name: CSVConnection1
-    type: CSV
-    file_path: /path/to/file.csv
+ConnectionName: CSVConnection
+EnvironmentName: Production
+type: CSV
+file_path: "/path/to/csv/file.csv"
