--- a/Connections/ExcelTest.yaml
+++ b/Connections/ExcelTest.yaml
@@ -1,7 +1,7 @@
-connections:
-  - name: ExcelConnection1
-    type: Excel
-    file_path: /path/to/file.xlsx
-    sheet_name: Sheet1
-    range: A1:B10
-    header_start_row: 0
+ConnectionName: ExcelConnection
+EnvironmentName: Production
+type: Excel
+file_path: "/path/to/excel/file.xlsx"
+sheet_name: "Sheet1"
+header_start_row: 0
+range: [0, 100]
