--- a/Connections/MicrosoftSqlServerTest.yaml
+++ b/Connections/MicrosoftSqlServerTest.yaml
@@ -1,8 +1,6 @@
-connections:
-  - name: SQLServerConnection1
-    type: MS SQL Server
-    server: myserver.com
-    database: mydatabase
-    authentication:
-      username: myusername
-      password: mypassword
+ConnectionName: MSSQLConnection
+EnvironmentName: Production
+type: MS SQL Server
+server: "your_server"
+username: "your_username"
+password: "your_password"
