--- a/Connections/CsvTest.yaml
+++ b/Connections/CsvTest.yaml
@@ -1,4 +1,4 @@
-ConnectionName: CSVConnection
+ConnectionName: winemag-data_CSV
 EnvironmentName: Production
 type: CSV
-file_path: "/path/to/csv/file.csv"
+file_path: "C:/Users/patri/Downloads/winemag-data-130k-v2.csv"
