Added Better Logging for a debuging issue, and validations

--- a/Connections/Dev_MSSQL_Test.yaml
+++ b/Connections/Dev_MSSQL_Test.yaml
@@ -1,6 +1,6 @@
 ############# Basic Info #################
 name: Dev_MSSQL_Test
-type: MSSQL
+type: mssql
 ############# Credentials ################
 username: SA
 password: YourStrongPassword123!
