--- a/Pipelines/CSV2PostgressAppendTest.yaml
+++ b/Pipelines/CSV2PostgressAppendTest.yaml
@@ -1,20 +1,14 @@
 name: CSV2PostgressAppendTest
-###############################################
 ############ Source Configuration #############
-###############################################
 source:
   connection_name: Dev_CSV_Jeopardy
-###############################################
 ######## Transformation Configuration #########
-###############################################
 transformations:
   - type: add_timestamp
     column_name: created_at
-###############################################
 ############ Target Configuration #############
-###############################################
 target:
-  connection_name: Dev_PostGress_Test
+  connection_name: Dev_Postgres_Test
   action: append
   schema_name: testschema
   table_name: testcsvtable
