--- a/Connections/Dev_Excel_WineMag.yaml
+++ b/Connections/Dev_Excel_WineMag.yaml
@@ -3,4 +3,4 @@ type: Excel
 file_path: C:/Users/patri/Downloads/winemag-data-130k-v2.xlsx
 sheet_name: notsheet1
 header_start_row: 1
-column_start_row: 1
+column_start_row: A
